# mkm_bot

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
mkm_bot/: cardmarket_client.py  common.py  config.py  data_provider.py  main.py  pricing.py  smtp.py
mkm_bot/xsd/: mkm_bot.xml  mkm_bot.xsd  xml_config.py
tests/: test_cardmarket_client.py  test_data.py  test_dummy.py
