[project]
name = "mkm_bot"
description = "A cardmarket.com bot to help updating card stock prices."
readme = "README.md"
authors = [
  { name = "Francisco Castanheira", email = "franciscocastanheira1998@gmail.com" },
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
  "lxml~=5.1",
  "pylsp-mypy~=0.6",              # needs to be installed in the local environment to work, for some reason. Through pipx doesn't work.
  "pytest~=8.0",
  "requests~=2.31",
  "undetected_chromedriver~=3.5",
  "debugpy~=1.8",
]

[project.scripts]
mkm-bot = "mkm_bot.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
packages = ["mkm_bot", "tests"]
strict = true

[[tool.mypy.overrides]]
module = 'lxml.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'undetected_chromedriver.*'
ignore_missing_imports = true

[tool.flake8]
exclude = [".git", ".venv", ".git"]
max-line-length = 99
count = true
